# planificacion_de_alimentos

./: pyproject.toml
src/: app.py
src/data/: preferencias.json
src/model/: excepciones.py  interfaz.py  logica.py
src/view/templates/: index.html
